# did-comm-with-mediator-rs

./: .env.example  .gitignore  Cargo.toml  DEMO_SCRIPT.md  Dockerfile.mediator  README.md  cleanup.sh  docker-compose.yml  restart.sh  setup.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPane.jsx  ControlPanel.jsx  FlowDiagram.jsx  IdentityCard.jsx  PacketInspector.jsx
src/: api.rs  identity.rs  main.rs  mediator.rs  packet_logger.rs
src/flows/: mod.rs  send_message.rs  trust_ping.rs
